force-app/main/default/objects/Contact/fields/View_link__c.field-meta.xml
<CustomField>
    <fullName>View_link__c</fullName>
    <label>View link</label>
    <type>TextArea</type>
</CustomField>