force-app/main/default/objects/Contact/fields/view_link_unescaped__c.field-meta.xml
<CustomField>
    <fullName>view_link_unescaped__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, &apos;view&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>view link unescaped</label>
    <type>Text</type>
</CustomField>