force-app/main/default/objects/Contact/fields/zohoId__c.field-meta.xml
<CustomField>
    <fullName>zohoId__c</fullName>
    <label>zohoId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>